--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "dev": "nodemon index.js",
     "start": "node index.js",
     "logs:prod": "heroku logs --tail",
     "deploy": "git push heroku master"
@@ -13,6 +13,8 @@
   "author": "Eppu",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "pg": "^8.7.3"
